fix promp content #2
